Add instructions to filterable graph

--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
       max-width: 1000px;
 
       margin: 0 auto;
+
+      font-size: 20px;
     }
   </style>
 </head>
 <body>
-
+  <p>
+    <em>Usage:</em>
+    Select a region to filter by clicking and dragging on the lower graph.
+    The upper graph will display the selection.
+    Click and hold on the filter selection to pan left or right.
+    Right click the filter selection to remove the filter.
+  </p>
 </body>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="brushing.js"></script>
